--- a/config/bettercombat.cfg
+++ b/config/bettercombat.cfg
@@ -299,6 +299,38 @@ enchantments {
 
 
 general {
+    B:"Attack & Sprint"=true
+    B:"Cancel Spartan Weaponry Fatigue"=true
+    B:"Digging Grass Paths Requires Animation"=true
+    D:"Extra Attack Height"=0.75
+    D:"Extra Attack Width"=0.25
+    B:"Fast Equip Hotbar Only"=false
+    D:"Intertia on Attack"=0.5
+    S:"Nausea Affects Mobs"=2.2
+    B:"Override Left And Right Click Keybinds"=true
+    B:"Show Shield Cooldown Crosshair"=true
+    S:"Silver Armor Damage"=1.5
+    B:"Stripping Bark Requires Animation"=false
+    B:"Tilling Land Requires Animation"=true
+}
+
+
+knockback {
+    # Enable have the KNOCKBACK_RESISTANCE attribute reduce the strength of knockback effects, rather than reducing the chance to not be knocked back. (For example: by default, a knockback_resistance of 0.5 means a 50% chance to not be knocked back from an attack. However, if this setting is true, a knockback_resistance of 0.5 means the distance or effects of being knocked back are 50% less far or powerful. [default: true]
+    B:"Better Knockback"=true
+
+    # Increases the knockback of an attack when sprinting. For example, setting this to 2.0F is the same knockback amount as Knockback II.
+    D:"Sprinting Knockback Amount"=0.5
+
+    # Multiply the motionY amount of knockback by this amount. Set to 0.5 by default to reduce the motionY by 50%. Does nothing if betterKnockback is disabled.
+    D:"knock Up Strength Multiplier"=0.5
+
+    # Multiply the motionXZ amount of knockback by this amount. This setting is pretty sensitive, and values below 0.5 have almost no visible knockback.
+    D:"knockback Strength Multiplier"=1.0
+}
+
+
+other {
     # Attacking an enemy while sprinting will no longer interrupt your sprint. [default: true]
     B:"Attack & Sprint"=true
 
@@ -323,12 +355,6 @@ general {
     # Setting to have Nausea & Blindness affect mobs. If a mob has a height equal to or less than this value, it will be affected by Blindess and Nausea potion effects, which causes them to often lose their target and stumble around. Set to 0.0F to disable. [range: 0.0 ~ 256.0, default: 2.2]
     S:"Nausea Affects Mobs"=2.2
 
-    # Set to true to override left and right keybinds. Use at your own risk! Setting this to false might allow players to 'cheese' extra attacks and attack while on cooldown with certain weapons from mods! [default: true]
-    B:"Override Left And Right Click Keybinds"=true
-
-    # Show the shield cooldown crosshair, similar to the dual-wielding crosshairs. [default: true]
-    B:"Show Shield Cooldown Crosshair"=true
-
     # Thorns, but for undead. How much damage undead attackers will take against an entity wearing Silver armor per piece of Silver armor. Setting this to 1.5F and wearing 2 pieces of Silver armor deals 3.0F damage to undead attackers. Silver weapons get a damage bonus, so why not add a special interaction with Silver armor? Set to 0.0F to disable. [range: 0.0 ~ 256.0, default: 1.5]
     S:"Silver Armor Damage"=1.5
 
@@ -337,21 +363,6 @@ general {
 
     # If set to true, tilling land requires an animation. Hoes with a faster attack speed till land faster. [default: true]
     B:"Tilling Land Requires Animation"=true
-}
-
-
-knockback {
-    # Enable have the KNOCKBACK_RESISTANCE attribute reduce the strength of knockback effects, rather than reducing the chance to not be knocked back. (For example: by default, a knockback_resistance of 0.5 means a 50% chance to not be knocked back from an attack. However, if this setting is true, a knockback_resistance of 0.5 means the distance or effects of being knocked back are 50% less far or powerful. [default: true]
-    B:"Better Knockback"=true
-
-    # Increases the knockback of an attack when sprinting. For example, setting this to 2.0F is the same knockback amount as Knockback II.
-    D:"Sprinting Knockback Amount"=0.5
-
-    # Multiply the motionY amount of knockback by this amount. Set to 0.5 by default to reduce the motionY by 50%. Does nothing if betterKnockback is disabled.
-    D:"knock Up Strength Multiplier"=0.5
-
-    # Multiply the motionXZ amount of knockback by this amount. This setting is pretty sensitive, and values below 0.5 have almost no visible knockback.
-    D:"knockback Strength Multiplier"=1.0
 }
 
 
@@ -510,6 +521,9 @@ visual {
 
     # How much your camera yaw moves when you swing a weapon. May cause slight motion sickness if set too high. Set to 0.0F to disable. [range: 0.0 ~ 1.0, default: 0.18]
     S:"Rotation Yaw Swing"=0.18
+
+    # Show the shield cooldown crosshair, similar to the dual-wielding crosshairs. [default: true]
+    B:"Show Shield Cooldown Crosshair"=true
 }
 
 
