The Veils of the Nether Update, pt 6 (final!)
- Add Wither Config
- Balanced wither stats to be suitable for the fight
- Added new attacks to the wither
- Added a chest at the top of the arena with a custom loot table
- Adjusted some sound volume levels
- Adjusted wither loot & experience
- Ghasts always drop 2 tears
- Rerolling now removes all effects, increased distance, no longer kills mobs
- Buffed veilstrium set bonus
- Gave player more effects for killing wither, killing wither also kills all other mobs
- Adjusted tooltips, lore (fixes tooltips for some items)

--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -340,19 +340,20 @@ sound {
 
     # Configure how each individual sound will be handled (block, cull, and volume scale) [default: [minecraft:block.water.ambient cull], [minecraft:block.lava.ambient cull], [minecraft:entity.sheep.ambient cull], [minecraft:entity.chicken.ambient cull], [minecraft:entity.cow.ambient cull], [minecraft:entity.pig.ambient cull], [dsurround:bison block], [dsurround:elephant block], [dsurround:gnatt block], [dsurround:insectbuzz block], [dsurround:hiss block], [dsurround:rattlesnake block]]
     S:"Sound Settings" <
-        dsurround:bison cull
-        dsurround:crocodile cull
-        dsurround:crow cull
-        dsurround:elephant cull
-        dsurround:frog cull
-        dsurround:gnatt cull
-        dsurround:hiss cull
-        dsurround:insectbuzz cull
-        dsurround:insectcrawl cull
-        dsurround:monstergrowl cull
-        dsurround:rattlesnake cull
-        dsurround:seagulls cull
-        dsurround:whale cull
+        dsurround:bison cull 
+        dsurround:crocodile cull 
+        dsurround:crow cull 
+        dsurround:elephant cull 
+        dsurround:frog cull 
+        dsurround:gnatt cull 
+        dsurround:hiss cull 
+        dsurround:insectbuzz cull 
+        dsurround:insectcrawl cull 
+        dsurround:monstergrowl cull 
+        dsurround:rattlesnake cull 
+        dsurround:seagulls cull 
+        dsurround:whale cull 
+        enderskills:shadow 243
         minecraft:entity.blaze.death 40
         minecraft:entity.blaze.shoot 40
         minecraft:entity.endermen.stare 135
@@ -360,7 +361,6 @@ sound {
         minecraft:entity.generic.hurt 75
         minecraft:entity.generic.splash 50
         minecraft:entity.ghast.shoot 5
-        minecraft:entity.ghast.warn 90
         minecraft:entity.item.pickup 90
         minecraft:entity.lightning.impact 70
         minecraft:entity.lightning.thunder 85
@@ -368,6 +368,7 @@ sound {
         minecraft:entity.player.hurt_on_fire 60
         minecraft:entity.player.splash 75
         minecraft:entity.wither.shoot 63
+        mysticstaffs:resurrection 400
         weeping-angels:angel_ambient 140
         weeping-angels:angel_neck_snap 295
         weeping-angels:angel_seen_1 block 275
@@ -376,8 +377,8 @@ sound {
         weeping-angels:angel_seen_4 block 275
         weeping-angels:angel_seen_5 block 275
         weeping-angels:angel_seen_6 block 275
-        weeping-angels:angel_seen_7 block
-        weeping-angels:angel_seen_8 block
+        weeping-angels:angel_seen_7 block 
+        weeping-angels:angel_seen_8 block 
         weeping-angels:blow 126
         weeping-angels:child_run 126
         weeping-angels:stone_scrap 250
