--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -28,18 +28,16 @@ reroll {
         es_skill @p reset
         es_cooldown @p reset
         es_endurance @p reset
-        gamestage silentremove @p nether
+        gamestage silentadd @p nether
+        gamestage silentremove @p killedWither
         gamestage silentremove @p erebus
         gamestage silentremove @p deepdark
         gamestage silentremove @p surface
         srpevolution phase_0
-        ctrlkill all -1
-        ctrlkill all 5
-        ctrlkill all 10
-        ctrlkill all 0
         scoreboard objectives remove timerbonus
         scoreboard objectives add timerbonus dummy
         timer @p add 100
+        effect @p clear
      >
 
     # Sets the resource location for the block you can spawn on. [default: [minecraft:grass], [minecraft:dirt], [minecraft:stone]]
@@ -86,7 +84,7 @@ reroll {
      >
 
     # Determines the minimum distance to teleport when you reroll. [range: 256 ~ 10240, default: 512]
-    I:"Reroll Minimum Distance"=1024
+    I:"Reroll Minimum Distance"=3024
 
     # Reroll players if they die to simulate a hardcore experience. [default: false]
     B:"Reroll On Death [Hardcore Mode]"=false
