--- a/config/rotm.cfg
+++ b/config/rotm.cfg
@@ -24,6 +24,7 @@ general {
         #    minecraft:player;minecraft:blaze;mob;fireball
         # >
         S:"Cancel Damage Sources" <
+            minecraft:wither;inWall
          >
 
         # Cancels a potion effect being able to be applied to a specified entity.
@@ -53,6 +54,7 @@ general {
         #    minecraft:zombie;minecraft:villager;1;false;false;false;minecraft:entity.enderdragon.growl;{NoAI:1b};50
         # >
         S:"Death Spawns" <
+            
          >
 
         # Allows entities to regain health after killing enemies of certain target type
@@ -117,6 +119,8 @@ general {
         #    minecraft:ender_dragon;minecraft:vex;80;6-8;10-20;false;true;80;true;false;true;true;minecraft:entity.enderdragon.growl
         # >
         S:"Summon Spawns" <
+            minecraft:wither;minecraft:wither_skeleton;75;2-2;15-20;false;true;0;false;true;true;enderskills:shadow;{HandItems:[{id:"nethercraft:pyridium_sword",Count:1b,tag:{Unbreakable:1}},{}],HandDropChances:[0.0F,0.085F]}
+            minecraft:wither;primitivemobs:blazing_juggernaut;25;2-2;15-20;false;true;2;false;true;true;enderskills:shadow;{LeftHanded:0,CanPickUpLoot:0b,Health:30,Attributes:[{Name:"generic.maxHealth",Base:30}]}
          >
     }
 
@@ -134,6 +138,9 @@ general {
         # Where: <modid:vehicle> is the entity vehicle to disallow.
         # <modid> is the modid name of the mod to disallow vehicles from.
         S:"Cancel Vehicle Mounting" <
+            minecraft:boat
+            minecraft:minecart
+            nethercraft:lava_boat
          >
 
         # This allows vehicles to be excluded from the Cancel Vehicle Mounting config.
@@ -166,7 +173,7 @@ general {
         D:globalSwimSpeedMultiplier=1.0
 
         # This config allows natural spawns on most solid blocks such as slabs or stairs.
-        B:naturalSpawnBuff=false
+        B:naturalSpawnBuff=true
 
         # This blocklist prevents the given entities from receiving the Global Swim Speed Multiplier
         S:rawGlobalSwimSpeedBlocklist <
