--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -67,6 +67,8 @@ attributes {
         
         eyesinthedarkness:eyes;generic.movementSpeed;1;1.0
         eyesinthedarkness:eyes;generic.followRange;0;40
+
+        minecraft:wither;generic.maxHealth;0;-100;/;0
      >
 }
 
@@ -839,6 +841,8 @@ targetblocker {
 
     #  [default: [zombie;*], [zombie_pigman;*], [zombie_villager;*], [husk;*], [skeleton;*], [stray;*], [wither_skeleton;*], [slime;*], [blaze;*], [magma_cube;*], [wither;*], [vindication_illager;*], [evocation_illager;*], [creeper;*], [spider;*], [cave_spider;*], [witch;*], [ghast;*]]
     S:targetBlocker_List <
+        wither;*
+        *;wither
      >
 }
 
