--- a/config/esm/epicsiegemod.cfg
+++ b/config/esm/epicsiegemod.cfg
@@ -77,6 +77,7 @@ general {
         srparasites:ancientball
         srparasites:homming
         srparasites:antiinfestedblock
+        minecraft:wither
      >
 
     # Prevents players skipping the night through sleep [default: false]
