Erebus changes and QoL
- Added bug meat and cooked bug meat. Raw versions gives debuffs and is dropped by all erebus mobs (thanks to QuietBorb for the textures!)
- Jade is now dropped by ALL erebus mobs rarely
- Fixed tooltips, consistency
- Added dev note to disable shaders in the erebus
- Made erebus fog thicker and closer

--- a/config/fogger.cfg
+++ b/config/fogger.cfg
@@ -13,6 +13,15 @@ dependant-fog {
     # Assign created Fog Definitions to specific minecraft biome and world's y-axis. Note that defining over 1000 biomes will become a bottleneck. To make the y-axis work define them by y-axis in descending order. Soon it will be fixed.
     S:FogDefinitionMaps <
         minecraft:hell 0.0 the-nether
+        erebus:underground_jungle 0.0 underground_jungle
+        erebus:volcanic_desert 0.0 volcanic_desert
+        erebus:subterranean_savannah 0.0 subterranean_savannah
+        erebus:elysian_fields 0.0 elysian_fields
+        erebus:ulterior_outback 0.0 ulterior_outback
+        erebus:fungal_forest 0.0 fungal_forest
+        erebus:submerged_swamp 0.0 submerged_swamp
+        erebus:fields_sub_forest 0.0 fields_sub_forest
+        erebus:petrified_forest 0.0 petrified_forest
         minecraft:ocean 0.0 temperate-water-1
         minecraft:desert 0.0 warm-desert-1
         minecraft:extreme_hills 0.0 temperate-hills-1
@@ -81,6 +90,15 @@ dependant-fog {
     # Define or use exsisting fog references to use them in FogMapDefinitions List.
     S:FogDefinitions <
         the-nether 0.1 0.5
+        underground_jungle 0.1 0.5
+        volcanic_desert 0.1 0.5
+        subterranean_savannah 0.1 0.5
+        elysian_fields 0.1 0.5
+        ulterior_outback 0.1 0.5
+        fungal_forest 0.1 0.5
+        submerged_swamp 0.1 0.5
+        fields_sub_forest 0.1 0.5
+        petrified_forest 0.1 0.5
         warm-forest-1 0.1 0.5
         warm-desert-1 0.05 0.5
         warm-desert-2 0.1 0.5
