--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -153,6 +153,8 @@ definitions {
         @erebus
         %Copper
         %Umber
+        contenttweaker:bug_meat
+        contenttweaker:cooked_bug_meat
      >
 
     #  [default: ]
