--- a/config/rotm.cfg
+++ b/config/rotm.cfg
@@ -119,8 +119,8 @@ general {
         #    minecraft:ender_dragon;minecraft:vex;80;6-8;10-20;false;true;80;true;false;true;true;minecraft:entity.enderdragon.growl
         # >
         S:"Summon Spawns" <
-            minecraft:wither;minecraft:wither_skeleton;75;2-2;15-20;false;true;0;false;true;true;enderskills:shadow;{HandItems:[{id:"nethercraft:pyridium_sword",Count:1b,tag:{Unbreakable:1}},{}],HandDropChances:[0.0F,0.085F]}
-            minecraft:wither;primitivemobs:blazing_juggernaut;25;2-2;15-20;false;true;2;false;true;true;enderskills:shadow;{LeftHanded:0,CanPickUpLoot:0b,Health:30,Attributes:[{Name:"generic.maxHealth",Base:30}]}
+            minecraft:wither;minecraft:wither_skeleton;75;2-2;15-20;false;true;0;false;true;true;enderskills:shadow;{CustomName:"Withered Minion", HandItems:[{id:"nethercraft:pyridium_sword",Count:1b,tag:{Unbreakable:1}},{}],HandDropChances:[0.0F,0.085F]}
+            minecraft:wither;primitivemobs:blazing_juggernaut;25;2-2;15-20;false;true;2;false;true;true;enderskills:shadow;{CustomName:"Juggernaut Guardian",LeftHanded:0,CanPickUpLoot:0b,Health:30,Attributes:[{Name:"generic.maxHealth",Base:30}]}
          >
     }
 
