Lots of fixes/tweaks, new spawn anchor item
- keybinding adjustment
- added Soul Anchor, which is given at the start of every dim (except nether) and sets your spawn point when right clicked (prevents players from falling through the barrier when respawning after dying)
- all important loot from the wither will now directly be added to each players inventory instead of dropping
- reduced volume of controlled chaos
- changed mc lang
- fixed bug meat recipe
- increased duration of launch from riftbreaker
- made soul sand blast proof (for the wither structure)

--- a/config/MusicTriggers/example/main.toml
+++ b/config/MusicTriggers/example/main.toml
@@ -35,7 +35,7 @@
 	[songs.overworld_chasepulse_kevinmacleod]
 		triggers = [ "dimension-overworld" ]
 	[songs.overworld_thearrival_monst3r]
-		triggers = [ "dimension-overworld", "menu" ]
+		triggers = [ "dimension-overworld" "menu" ]
 	[songs.overworld_bluesizzle_kevinmacleod]
 		triggers = [ "dimension-overworld" ]
 	[songs.overworld_controlledchaosnopercussion_kevinmacleod]
@@ -53,10 +53,11 @@
 	[songs.deepdark_childrenstheme_kevinmacleod]
 		triggers = [ "dimension-deepdark" ]
 	[songs.deepdark_anxiety_kevinmacleod]
-		triggers = [ "dimension-deepdark", "loading"]
+		triggers = [ "dimension-deepdark" "loading" ]
 	[songs.deepdark_deepnoise_kevinmacleod]
 		triggers = [ "dimension-deepdark" ]
 	[songs.erebus_controlledchaos_kevinmacleod]
+		volume = "0.5"
 		triggers = [ "dimension-erebus" ]
 	[songs.erebus_awkwardmeeting_kevinmacleod]
 		triggers = [ "dimension-erebus" ]
