--- a/config/itemborders.cfg
+++ b/config/itemborders.cfg
@@ -83,6 +83,7 @@ manual_borders {
         %Heart Container
         timeisup:timer_bonus
         quark:soul_compass
+        contenttweaker:soul_anchor
      >
 }
 
