--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -68,6 +68,7 @@ definitions {
         %Heart Container
         timeisup:timer_bonus
         quark:soul_compass
+        contenttweaker:soul_anchor
      >
 
     #  [default: ]
