update immersive combat

--- a/config/bettercombat.cfg
+++ b/config/bettercombat.cfg
@@ -346,8 +346,11 @@ other {
     # How wide, on all directions, the hitbox will be extended for melee attacks. Increase the value of this setting to make the XZ-accuracy of attacks more forgiving. 1.0 is equal to an additional block width on XZ sides.
     D:"Extra Attack Width"=0.25
 
-    # Set to true to have Fast Equip use only items in the hotbar instead of the entire inventory. [default: false]
+    # Set to true to have Fast Equip use only items in the hotbar instead of the entire inventory. The Fast Equip keybind is set to X, check the minecraft keybind settings to change this. [default: false]
     B:"Fast Equip Hotbar Only"=false
+
+    # Set to true to have Fast Equip only find weapons or shields, and not tools, for the offhand. Tools will still be found and equipped in the mainhand if no weapons are found. The Fast Equip keybind is set to X, check the minecraft keybind settings to change this. [default: false]
+    B:"Fast Equip Offhand Weapons Or Shields Only"=false
 
     # Multiplies the player speed by this amount when they swing a weapon. Set to 1.0 to disable.
     D:"Intertia on Attack"=0.5
@@ -428,6 +431,15 @@ sound {
         caestus
      >
 
+    # The volume of the sound that plays when you shield bash. [range: 0.0 ~ 2.0, default: 1.0]
+    S:"Shield Bash Sound Volume"=1.0
+
+    # The volume of the sound that plays when block with a shield. [range: 0.0 ~ 2.0, default: 1.0]
+    S:"Shield Block Sound Volume"=1.0
+
+    # The volume of the sound that plays when you equip or sheathe a weapon. [range: 0.0 ~ 2.0, default: 1.0]
+    S:"Weapon Equip and Sheate Sound Volume"=1.0
+
     # The volume of the sound that plays when you land a weapon hit. [range: 0.0 ~ 2.0, default: 1.0]
     S:"Weapon Hit Sound Volume"=1.0
 
@@ -447,7 +459,7 @@ swords {
     # 
     # The [Additional Attack Speed=0.2] field is a value added to the sword Attack Speed.
     # For example, if this field is set to 0.2, a matched sword would have the Attack Speed value increased by 0.2.
-    # If that sword had an Attack Speed of 1.6, it would become 1.8. This field can also accept negative values, such as -0.6. [default: [[Sword Substring=golden_sword]		[Additional Attack Speed=0.4]], [[Sword Substring=wooden_sword]		[Additional Attack Speed=0.4]]]
+    # If that sword had an Attack Speed of 1.6, it would become 1.8. This field can also accept negative values, such as -0.6. [default: [[Sword Substring=golden_sword]		[Additional Attack Speed=0.2]], [[Sword Substring=wooden_sword]		[Additional Attack Speed=0.1]]]
     S:"Sword Tweaker" <
         [Sword Substring=golden_sword]		[Additional Attack Speed=0.4]
         [Sword Substring=wooden_sword]		[Additional Attack Speed=0.4]
