change srp lore messages

--- a/config/SRParasites.cfg
+++ b/config/SRParasites.cfg
@@ -2306,7 +2306,7 @@ parasite_evolution_phases_3 {
     I:"Phase 3 Sleep Penalty"=5000
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Three]
-    S:"Phase 3 Warning Message"=§4Again and again, you will die.
+    S:"Phase 3 Warning Message"=§4How amusing, the illusion of control you cling to.
 }
 
 
@@ -2348,7 +2348,7 @@ parasite_evolution_phases_4 {
     I:"Phase 4 Sleep Penalty"=50000
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Four]
-    S:"Phase 4 Warning Message"=§4You will suffer here for eternity.
+    S:"Phase 4 Warning Message"=§4Did you really think you had a chance, Runner?
 }
 
 
@@ -2390,7 +2390,7 @@ parasite_evolution_phases_5 {
     I:"Phase 5 Sleep Penalty"=1500000
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Five]
-    S:"Phase 5 Warning Message"=§4Why do you continue? Give up.
+    S:"Phase 5 Warning Message"=§4Might I remind you... there is no escape. 
 }
 
 
@@ -2432,7 +2432,7 @@ parasite_evolution_phases_6 {
     I:"Phase 6 Sleep Penalty"=5000000
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Six]
-    S:"Phase 6 Warning Message"=§4Might I remind you... there is no escape. Kill yourself, now.
+    S:"Phase 6 Warning Message"=§4Why do you continue so persistently? Give up and die.
 }
 
 
@@ -2516,7 +2516,7 @@ parasite_evolution_phases_8 {
     I:"Phase 8 Sleep Penalty"=1
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Eight]
-    S:"Phase 8 Warning Message"=§4Time is running out. Your destruction will be swift and painful.
+    S:"Phase 8 Warning Message"=§4Time is running out. Your death will be swift and painful.
 }
 
 
