--- a/config/Elenai Dodge 2.cfg
+++ b/config/Elenai Dodge 2.cfg
@@ -22,7 +22,7 @@ general {
             B:"Compatibility HUD"=true
 
             # Whether the GUI fades out when it is inactive.
-            B:"Fadeout Inactive HUD"=true
+            B:"Fadeout Inactive HUD"=false
 
             # Whether to show the feathers in the UI.
             B:"Show HUD"=true
