Add Dreadstone Fragment and Tablet
still needs textures

--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -185,6 +185,8 @@ inventory {
     S:"Essential Items" <
         enderskills:book
         minecraft:torch
+        corpsecomplex:scroll
+        contenttweaker:dreadstone_fragment
      >
 
     # List of items that are always dropped
@@ -275,7 +277,7 @@ respawning {
      >
 
     # Set to true to enable a craftable return scroll that teleports players to their death location
-    B:"Return Scroll"=false
+    B:"Return Scroll"=true
 
     # Mobs to spawn at location on death
     S:"Spawn Mobs on Death" <
