--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -69,6 +69,7 @@ definitions {
         timeisup:timer_bonus
         quark:soul_compass
         contenttweaker:soul_anchor
+        corpsecomplex:scroll
      >
 
     #  [default: ]
@@ -146,6 +147,7 @@ definitions {
         simpleores:tin_pickaxe
         adfinders:metals_finder
         %Glowstone
+        contenttweaker:dreadstone_fragment
      >
 
     #  [default: ]
