recommend new shaders

--- a/config/concheckrmd.cfg
+++ b/config/concheckrmd.cfg
@@ -68,7 +68,7 @@ general {
         B:"2) Display message box topmost?"=true
 
         # The text that will be displayed in the message box.
-        S:"3) Message Box Text"=Welcome to TREPIDATION. Before you start running, remember that this is a hardcore roguelite modpack. Dying frequently and creating new worlds is normal. Each death will teach you something about TREPIDATIONs gameplay loop. Chocapic13 Shaders are EXTREMELY recommended for the best experience (and performs well even on low-end computers). Download here (https://www.curseforge.com/minecraft/customization/chocapic13-shaders/files/3221720) and put the zip in the shaderpacks folder where TREPIDATION is located.
+        S:"3) Message Box Text"=Welcome to TREPIDATION. Before you start running, remember that this is a hardcore roguelite modpack. Dying frequently and resetting runs is normal. Each death will teach you something about TREPIDATIONs gameplay loop. Complementary Shaders are EXTREMELY recommended for the best experience (and performs well even on low-end computers, adjust shader performance options if neccessary). Download here (https://www.curseforge.com/minecraft/shaders/complementary-unbound/files/4746341) and put the zip in the shaderpacks folder where TREPIDATION is located.
     }
 
     ##########################################################################################################
