potion descriptions (doesnt work for modded effects?)

--- a/config/potiondescriptions.cfg
+++ b/config/potiondescriptions.cfg
@@ -13,7 +13,7 @@ general {
     B:"Log missing descriptions"=false
 
     # Whether sneaking is required to display the tooltip.
-    B:"Sneaking Required"=true
+    B:"Sneaking Required"=false
 }
 
 
