--- a/config/concheckrmd.cfg
+++ b/config/concheckrmd.cfg
@@ -68,9 +68,7 @@ general {
         B:"2) Display message box topmost?"=true
 
         # The text that will be displayed in the message box.
-        S:"3) Message Box Text"=Welcome to TREPIDATION. Before you start running, remember that this is a hardcore roguelite modpack. Dying frequently and resetting runs is normal. Each death will teach you something about TREPIDATIONs gameplay loop. 
-        
-        Complementary Shaders are EXTREMELY recommended for the best experience (and performs well even on low-end computers, adjust shader performance options if neccessary). It should already be enabled!
+        S:"3) Message Box Text"=Welcome to TREPIDATION. Before you start running, remember that this is a hardcore roguelite modpack. Dying frequently and resetting runs is normal. Each death will teach you something about TREPIDATIONs gameplay loop. Complementary Shaders are EXTREMELY recommended for the best experience (and performs well even on low-end computers, adjust shader performance options if neccessary). It should already be enabled!
     }
 
     ##########################################################################################################
