veilstrium armor setbonus no longer cures riftbreaker launch

--- a/config/rltweaker.cfg
+++ b/config/rltweaker.cfg
@@ -762,6 +762,7 @@ general {
 
             # Potion effects that are incurable
             S:"Incurable Potion Effects" <
+                potioncore:launch
              >
 
             # Enable to make potion sickness and effects applied by potion sickness incurable
