--- a/config/enderskills/Ability/Defense/Fire/overheat.cfg
+++ b/config/enderskills/Ability/Defense/Fire/overheat.cfg
@@ -3,9 +3,6 @@
 general {
 
     config {
-        # Valid values:
-        # MULTIPLICATION
-        # ADDITION
         S:applyAs=MULTIPLICATION
         S:dsl <
             
@@ -100,6 +97,13 @@ general {
             └ )
             
          >
+    }
+
+    values {
+        # Valid values:
+        # MULTIPLICATION
+        # ADDITION
+        S:applyAs=MULTIPLICATION
     }
 
 }
