--- a/config/enderskills/Attribute/Offence/ability_duration.cfg
+++ b/config/enderskills/Attribute/Offence/ability_duration.cfg
@@ -3,9 +3,6 @@
 general {
 
     config {
-        # Valid values:
-        # MULTIPLICATION
-        # ADDITION
         S:applyAs=MULTIPLICATION
         S:dsl <
             
@@ -41,6 +38,13 @@ general {
             └ )
             
          >
+    }
+
+    values {
+        # Valid values:
+        # MULTIPLICATION
+        # ADDITION
+        S:applyAs=MULTIPLICATION
     }
 
 }
