--- a/config/enderskills/global.cfg
+++ b/config/enderskills/global.cfg
@@ -16,10 +16,16 @@ general {
             # Disallows abilities from breaking blocks
             B:destroyBlocks=false
 
-            # Modifies positive effects of all abilities (used for balancing heals)
+            # Modifies regeneration delay after using an ability in minecraft seconds (20 = one second)
+            I:enduranceDelay=100
+
+            # Modifies regeneration speed in minecraft seconds (20 = one second)
+            I:enduranceRegen=10
+
+            # Modifies positive effects of all abilities (used for balancing damage)
             D:globalNegativeEffect=1.0
 
-            # Modifies negative effects of all abilities (used for balancing damage)
+            # Modifies negative effects of all abilities (used for balancing heals)
             D:globalPositiveEffect=1.0
 
             # Disallows DoT abilities from knockback
@@ -107,6 +113,16 @@ general {
             # Min: 0
             # Max: 2147483647
             I:enderOreSpawnRate=0
+        }
+
+        worlddrops {
+            # Chance of ender token drops?
+            # Min: 0.0
+            # Max: 1.0
+            D:enderTokenDropRate=0.07
+
+            # Toggle ender token drops
+            B:enderTokenDropToggle=true
         }
 
     }
