RAM warning adjustments

--- a/config/concheckrmd.cfg
+++ b/config/concheckrmd.cfg
@@ -95,7 +95,7 @@ general {
         # The amount of RAM recommended for stable gameplay.
         # Min: 128
         # Max: 51200
-        I:"1) Ram Recommended (IN MB)"=2048
+        I:"1) Ram Recommended (IN MB)"=5048
 
         # If the player has less than the recommended amount of RAM assigned to the modpack then a warning will be displayed when the game is started.
         B:"2) Check RAM meets recommendation?"=true
@@ -104,10 +104,10 @@ general {
         B:"3) Display message box topmost?"=true
 
         # Customise the text that appears in the warning message. Will display custom message instead of the default text.
-        B:"4) Customise low RAM Warning?"=false
+        B:"4) Customise low RAM Warning?"=true
 
         # The custom message to be displayed if you have set the previous setting to 'True'. Will display custom message instead of the default text.
-        S:"5) Custom Message"=You should add more RAM to expierence better performance.
+        S:"5) Custom Message"=You should add more RAM to experience better performance.
     }
 
     ##########################################################################################################
@@ -120,16 +120,16 @@ general {
         # The amount of RAM recommended for stable gameplay.
         # Min: 128
         # Max: 51200
-        I:"1) Ram Recommended (IN MB)"=2048
+        I:"1) Ram Recommended (IN MB)"=5048
 
         # If the player has less than the recommended amount of RAM assigned to the modpack then a warning will be displayed in chat when a world is loaded.
         B:"2) Check RAM meets recommendation?"=true
 
         # Customise the text that appears in the warning message. Will display custom message instead of the default text.
-        B:"3) Customise low RAM Warning?"=false
+        B:"3) Customise low RAM Warning?"=true
 
         # The custom message to be displayed in chat if you have set the previous setting to 'True'. Will display custom message instead of the default text.
-        S:"4) Custom Message"=[WARNING] You may expierence bad performance due to a shortage of RAM.
+        S:"4) Custom Message"=[WARNING] You may experience bad performance due to a shortage of RAM.
     }
 
     ##########################################################################################################
@@ -142,7 +142,7 @@ general {
         # The amount of RAM required for the game to run.
         # Min: 128
         # Max: 51200
-        I:"1) Ram Required (IN MB)"=1024
+        I:"1) Ram Required (IN MB)"=3024
 
         # If the player has less than the required amount of RAM assigned to the modpack then they will be alerted as the game starts and the game will close.
         B:"2) Check RAM meets requirement?"=false
