add backpack to the nether

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -148,6 +148,7 @@ definitions {
         adfinders:metals_finder
         %Glowstone
         contenttweaker:dreadstone_fragment
+        quark:backpack
      >
 
     #  [default: ]
