--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1349,7 +1349,7 @@ oddities {
         B:"Enable Crafting"=false
 
         # Set this to false if you want to disable the villager trade so you can add an alternate acquisition method
-        B:"Enable Trade"=true
+        B:"Enable Trade"=false
         I:"Max Required Emeralds"=18
         I:"Min Required Emeralds"=12
         I:"Required Leather"=12
