update retake, should fix spawning on barrier

--- a/config/retake.cfg
+++ b/config/retake.cfg
@@ -1,13 +1,29 @@
 # Configuration file
 
+debug {
+    # Enable to see how long player has been on cooldown (show per player, in console)
+    # Default: false
+    B:counter=false
+}
+
+
+filter {
+    # Blocks that should not be allow to respawn on, use comma as the delimiter.
+    # Example:
+    #    modid:block_name
+    #    modid2:block_name_2
+    S:blacklistBlock <
+        dimstack:portal
+        dimstack:bedrock
+        minecraft:netherrack
+     >
+}
+
+
 "global config" {
     # Cooldown before allow next respawn (seconds)
     # Default: 10
-    I:cooldown=10
-
-    # Enable debug for cooldown counting (show per player)
-    # Default: false
-    B:debug=false
+    I:cooldown=0
 
     # Default: 32
     I:maxRadius=100
@@ -15,9 +31,9 @@
     # Default: 16
     I:minRadius=75
 
-    # Min: 5
-    # Max: 50
-    I:retryAttempt=25
+    # Min: 1
+    # Max: 2147483647
+    I:retryAttempt=100
 }
 
 
