pickaxes never drop on death (so you dont get stuck when rebirth nearby)

--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -187,6 +187,21 @@ inventory {
         minecraft:torch
         corpsecomplex:scroll
         contenttweaker:dreadstone_fragment
+        nethercraft:pyridium_pickaxe
+        nethercraft:neridium_pickaxe
+        nethercraft:netherrack_pickaxe
+        nethercraft:glowood_pickaxe
+        simpleores:tin_pickaxe
+        simpleores:copper_pickaxe
+        simpleores:mythril_pickaxe
+        simpleores:adamantium_pickaxe
+        simpleores:onyx_pickaxe
+        erebus:jade_pickaxe
+        minecraft:diamond_pickaxe
+        minecraft:golden_pickaxe
+        minecraft:stone_pickaxe
+        minecraft:wooden_pickaxe
+        minecraft:iron_pickaxe
      >
 
     # List of items that are always dropped
