update wither config
wither no longer breaks liquids and can now break blocks underneath it

--- a/config/Wither Config.cfg
+++ b/config/Wither Config.cfg
@@ -5,6 +5,8 @@ general {
     common {
         D:armor=3.0
         B:breakBlocksWhenTargetingPlayer=true
+        B:breakFluidsWhenTargetingPlayer=false
+        B:breakLiquids=false
         D:followDistance=2.5
         D:followRange=100.0
         D:maxHealth=200.0
@@ -24,6 +26,12 @@ general {
             D:explosionStrength=0.1
             D:healOnKill=0.0
             D:magicDamage=0.0
+        }
+
+        boatjailfix {
+            B:enabled=true
+            I:range=7
+            I:tickDelay=5
         }
 
     }
